# servidor_backend_de_informacion_climatologica

./: .gitignore  README.md
servidor_de_informacion_climatologica/: .env  404.html  Cargo.toml  index.html
servidor_de_informacion_climatologica/migrations/2023-11-03-003822_create_estaciones/: down.sql  up.sql
servidor_de_informacion_climatologica/migrations/2023-11-05-172224_create_reports/: down.sql  up.sql
servidor_de_informacion_climatologica/src/: connection_db.rs  download.rs  download_data.rs  extract_data.rs  handler_date.rs  handler_estaciones.rs  handler_reports_dato_horario.rs  lib.rs  main.rs  models.rs  querys_database.rs  regular_expresions.rs  regular_expressions.rs  schema.rs  structs.rs  thread_pool.rs  update_data.rs
