[package]
name = "servidor_de_informacion_climatologica"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "*", features = ["blocking","json"]}
regex = {version = "*"}
chrono ={ version = "*"}
diesel = {version = "2.1.0", features = ["mysql"]}
dotenvy = "0.15"
